@@ -21,6 +21,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- If crypt() doesn't support MD5 passwords, fall back to using
 	  a valid, non-MD5 salt even if MD5 passwords are enabled.
 	- Fix format string vuln. in vactivedir.c (thanks D4rk Eagle).
+	- Added comment to vqmaillocal.c mentioning that it isn't
+	  maintained and probably doesn't work.  Makefile no longer
+	  installs vqmaillocal.
 
 5.4.6 - released 30-Jun-04
 
